--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2021"
 [dependencies]
 anyhow = { version = "1.0.71", features = ["backtrace"] }
 backtrace = "0.3.68"
+const-str = "0.5.6"
 lazy_static = "1.4.0"
 once_cell = "1.18.0"
 regex = "1.9.1"
+static_assertions = "1.1.0"
 thiserror = "1.0.43"
 unicode-segmentation = "1.10.1"
 
