--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = { version = "1.0.71", features = ["backtrace"] }
 backtrace = "0.3.68"
 const-str = "0.5.6"
+delegate = "0.10.0"
 lazy_static = "1.4.0"
 once_cell = "1.18.0"
 regex = "1.9.1"
