--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = { version = "1.0.71", features = ["backtrace"] }
 backtrace = "0.3.68"
 const-str = "0.5.6"
 delegate = "0.10.0"
+extend = "1.2.0"
 lazy_static = "1.4.0"
 once_cell = "1.18.0"
 regex = "1.9.1"
