--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ backtrace = "0.3.68"
 const-str = "0.5.6"
 delegate = "0.10.0"
 extend = "1.2.0"
+gc = { version = "0.5.0", features = ["derive", "gc_derive"] }
 lazy_static = "1.4.0"
 once_cell = "1.18.0"
 regex = "1.9.1"
