--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,10 @@ edition = "2021"
 anyhow = { version = "1.0.71", features = ["backtrace"] }
 backtrace = "0.3.68"
 const-str = "0.5.6"
+debug-ignore = "1.0.5"
 delegate = "0.10.0"
+derivative = "2.2.0"
+either = "1.9.0"
 extend = "1.2.0"
 gc = { version = "0.5.0", features = ["derive", "gc_derive"] }
 lazy_static = "1.4.0"
