--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,14 @@
 name = "evilang"
 version = "0.1.0"
 edition = "2021"
+authors = ["Aryan Chudasama"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 anyhow = { version = "1.0.71", features = ["backtrace"] }
 backtrace = "0.3.68"
+clap = { version = "4.3.21", features = ["derive"] }
 const-str = "0.5.6"
 debug-ignore = "1.0.5"
 delegate = "0.10.0"
