--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ either = "1.9.0"
 extend = "1.2.0"
 gc = { version = "0.5.0", features = ["derive", "gc_derive"] }
 lazy_static = "1.4.0"
+num-traits = "0.2.16"
 once_cell = "1.18.0"
 regex = "1.9.1"
 static_assertions = "1.1.0"
