Added support for native objects.
Added support for native objects.
Added a procedural macro to automatically generate the code for a native object.
Added vectors, dynamically sized arrays.
Added a double colon operator to call static functions. Removed the arrow operator for member functions, they can be called with the regular dot operator.
Added debug, print and to_string functions.

--- a/evilang_proc_macros/Cargo.toml
+++ b/evilang_proc_macros/Cargo.toml
@@ -10,6 +10,11 @@ syn = { version = "2.0.29", features = ["fold", "extra-traits", "test", "visit",
 synstructure = "0.13.0"
 proc-macro2 = "1.0.66"
 quote = "1.0.33"
+darling = "0.20.3"
+split-iter = "0.1.0"
+itertools = "0.11.0"
+maybe-owned = "0.3.4"
+unhygienic = "0.1.1"
 
 [lib]
 name = "evilang_proc_macros"
