--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ authors = ["Aryan Chudasama"]
 
 [dependencies]
 clap = "4.3.23"
-evilang_lib = {version = "0.1.0", path = "evilang_lib"}
-evilang_traits = {version = "0.1.0", path = "evilang_traits"}
+either = "1.9.0"
+evilang_lib = { version = "0.1.0", path = "evilang_lib" }
+evilang_traits = { version = "0.1.0", path = "evilang_traits" }
 
 [[bin]]
 name = "evilang_main"
