--- a/evilang_lib/Cargo.toml
+++ b/evilang_lib/Cargo.toml
@@ -16,6 +16,8 @@ regex = "1.9.1"
 static_assertions = "1.1.0"
 thiserror = "1.0.43"
 evilang_traits = { path = "../evilang_traits", version = "0.1.0" }
+maybe-owned = "0.3.4"
+itertools = "0.11.0"
 
 [lib]
 name = "evilang_lib"
